--- a/beamerpolito.tex
+++ b/beamerpolito.tex
@@ -13,344 +13,367 @@
 
 \newcommand{\hrefcol}[2]{\textcolor{cyan}{\href{#1}{#2}}}
 
-\title{Criando um Classificador}
-\subtitle{Saindo da zona de conforto}
-\course{CPE XXX - Aprendizado de XXX}
-\author{Natanael Moura Junior}
-\IDnumber{\href{mailto:natmourajr@poli.ufrj.br}{natmourajr@poli.ufrj.br}, \href{mailto:natmourajr@lps.ufrj.br}{natmourajr@lps.ufrj.br}}
+%------------------------------------------------
+% Atenção: pressuponho que seu preâmbulo já tenha:
+% \documentclass{beamer}
+% \usetheme{sintef}
+% (e pacotes padrão do template)
+%------------------------------------------------
+
+% Metadados (ajuste no preâmbulo do seu .tex)
+\title{Attention Models: da motivação às variantes modernas}
+\subtitle{Intuição geométrica, formulação matemática e aplicações}
+\author{Seu Nome}
+\date{\today}
+
+% Opcional: imagem de fundo do título
+% \titlebackground{assets/background_negative}
 
 \begin{document}
+
 \maketitle
 
-\begin{frame}
-
-This template is a based on \hrefcol{https://www.overleaf.com/latex/templates/sintef-presentation/jhbhdffczpnx}{SINTEF Presentation} from \hrefcol{mailto:federico.zenith@sintef.no}{Federico Zenith} and its derivation \hrefcol{https://github.com/TOB-KNPOB/Beamer-LaTeX-Themes}{Beamer-LaTeX-Themes} from Liu Qilong and Andrea Gasparini
-
-\vspace{\baselineskip}
-
-In the following you find a brief introduction on how to use \LaTeX\ and the beamer package to prepare slides, based on the one written by \hrefcol{mailto:federico.zenith@sintef.no}{Federico Zenith} for \hrefcol{https://www.overleaf.com/latex/templates/sintef-presentation/jhbhdffczpnx}{SINTEF Presentation}
-
-% This template is released under \hrefcol{https://creativecommons.org/licenses/by-nc/4.0/legalcode}{Creative Commons CC BY 4.0} license
-
-\end{frame}
-
-\section{Introduction}
-
-\begin{frame}{Beamer for SINTEF slides}
-\begin{itemize}
-\item We assume you can use \LaTeX; if you cannot,
-\hrefcol{http://en.wikibooks.org/wiki/LaTeX/}{you can learn it here}
-\item Beamer is one of the most popular and powerful document
-classes for presentations in \LaTeX
-\item Beamer has also a detailed
-\hrefcol{http://www.ctan.org/tex-archive/macros/latex/contrib/beamer/doc/beameruserguide.pdf}{user
- manual}
-\item Here we will present only the most basic features to get you up to speed
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Beamer vs. PowerPoint}
-Compared to PowerPoint, using \LaTeX\ is better because:
-\begin{itemize}
-\item It is not What-You-See-Is-What-You-Get, but
-What-You-\emph{Mean}-Is-What-You-Get:\\
-you write the content, the computer does the typesetting
-\item Produces a \texttt{pdf}: no problems with fonts, formulas,
-      program versions
-\item Easier to keep consistent style, fonts, highlighting, etc.
-\item Math typesetting in \TeX\ is the best:
-\begin{equation*}
-\mathrm{i}\,\hslash\frac{\partial}{\partial t} \Psi(\mathbf{r},t) =
--\frac{\hslash^2}{2\,m}\nabla^2\Psi(\mathbf{r},t)
-+ V(\mathbf{r})\Psi(\mathbf{r},t)
-\end{equation*}
-
-\end{itemize}
-\end{frame}
-
-\begin{frame}[fragile]{Getting Started}
-\framesubtitle{Selecting the SINTEF Theme}
-To start working with \texttt{sintefbeamer}, start a \LaTeX\ document with the
-preamble:
-\begin{block}{Minimum SINTEF Beamer Document}
-\verb|\documentclass{beamer}|\\
-\verb|\usetheme{sintef}|\\
-\verb|\begin{document}|\\
-\verb|\begin{frame}{Hello, world!}|\\
-\verb|\end{frame}|\\
-\verb|\end{document}|\\
-\end{block}
-\end{frame}
-
-\begin{frame}[fragile]{Title page}
-To set a typical title page, you call some commands in the preamble:
-\begin{block}{The Commands for the Title Page}
-\begin{verbatim}
-\title{Sample Title}
-\subtitle{Sample subtitle}
-\author{First Author, Second Author}
-\date{\today} % Can also be (ab)used for conference name &c.
-\end{verbatim}
-\end{block}
-You can then write out the title page with \verb|\maketitle|.
-
-To set a \textbf{background image} use the \verb|\titlebackground| command 
-before \verb|\maketitle|; its only argument is the name (or path) of a graphic 
-file.
-
-If you use the \textbf{starred version} \verb|\titlebackground*|, the image 
-will be clipped to a split view on the right side of the title slide.
-
-\end{frame}
-
-\begin{frame}[fragile]{Writing a Simple Slide}
-\framesubtitle{It's really easy!}
+%===========================
+% ROADMAP
+%===========================
+\section{Roteiro}
+\begin{frame}{Roteiro da Apresentação}
 \begin{itemize}[<+->]
-\item A typical slide has bulleted lists
-\item These can be uncovered in sequence
-\end{itemize}
-\begin{block}{Code for a Page with an Itemised List}<+->
-\begin{verbatim}
-\begin{frame}{Writing a Simple Slide}
-  \framesubtitle{It's really easy!}
-  \begin{itemize}[<+->]
-    \item A typical slide has bulleted lists
-    \item These can be uncovered in sequence
-  \end{itemize}\end{frame}
-\end{verbatim}
-\end{block}
-\end{frame}
-
-\section{Personalization}
-
-\footlinecolor{sintefyellow}
-\begin{frame}[fragile]{Changing Slide Style}
-\begin{itemize}
-\item You can select the white or \textit{maincolor} \textbf{slide style} \emph{in the 
-preamble} with \verb|\themecolor{white}| (default) or \verb|\themecolor{main}|
-      \begin{itemize}
-      \item You should \emph{not} change these within the document: Beamer does 
-      not like it
-      \item If you \emph{really} must, you may have to add 
-      \verb|\usebeamercolor[fg]{normal text}| in the slide
-      \end{itemize}
-\item You can change the \textbf{footline colour} with 
-\verb|\footlinecolor{color}|
-      \begin{itemize}
-      \item Place the command \emph{before} a new \verb|frame|
-      \item There are four ``official'' colors: 
-      \testcolor{maincolor}, \testcolor{sintefyellow}, 
-      \testcolor{sintefgreen}, \testcolor{sintefdarkgreen}
-      \item Default is no footline; you can restore it with 
-      \verb|\footlinecolor{}|
-      \item Others may work, but no guarantees!
-      \item Should \emph{not} be used with the \verb|maincolor| theme!
-      \end{itemize}
+  \item Motivação e histórico
+  \item Modelos de sequência (RNN/LSTM) + Attention
+  \item Embeddings, interpretação geométrica e matemática
+  \item Transformers e posicionais
+  \item Aplicações: Séries Temporais, Language Models, ViT, GAT
+  \item Treinamento, variantes e hiperparâmetros
+  \item Tamanho ideal (scaling), Mixture of Experts
+  \item Pruning e Distillation
+  \item Limitações, diagnóstico e conclusões
 \end{itemize}
 \end{frame}
 
-\begin{frame}[fragile]{Blocks}
-\begin{columns}
-\begin{column}{0.3\textwidth}
-\begin{block}{Standard Blocks}
-These have a color coordinated with the footline (and grey in the blue theme)
-\begin{verbatim}
-\begin{block}{title}
-content...
-\end{block}
-\end{verbatim}
-\end{block}
-\end{column}
-\begin{column}{0.7\textwidth}
-\begin{colorblock}[black]{sinteflightgreen}{Colour Blocks}
-Similar to the ones on the left, but you pick the colour. Text will be white by 
-default, but you may set it with an optional argument.
+%===========================
+% MOTIVAÇÃO & HISTÓRICO
+%===========================
+\begin{chapter}[assets/background_negative]{sintefdarkgreen}{Motivação \& Histórico}\end{chapter}
+
+\section{Motivação}
+\begin{frame}{Por que Atenção?}
+\begin{itemize}[<+->]
+  \item Capturar dependências longas e filtrar informação relevante
+  \item RNNs sofrem com gradientes e paralelização limitada
+  \item Pesos de atenção ajudam na interpretabilidade
+  \item Melhor relação capacidade/compute em diversas tarefas
+\end{itemize}
+% Tempo ~2 min
+\end{frame}
+
+\begin{frame}{Histórico em 3 passos}
+\begin{itemize}[<+->]
+  \item \textbf{Additive Attention} (Bahdanau) para NMT
+  \item \textbf{Dot-Product Attention} (Luong) — caminho para escalabilidade
+  \item \textbf{Transformers} (Vaswani et al., 2017): “Attention is All You Need”
+\end{itemize}
+% Tempo ~1 min
+\end{frame}
+
+%===========================
+% FUNDAMENTOS
+%===========================
+\begin{chapter}[assets/background_negative]{sintefgreen}{Fundamentos}\end{chapter}
+
+\section{Modelos de Sequência}
+\begin{frame}{RNN/GRU/LSTM — limites práticos}
+\begin{itemize}[<+->]
+  \item Cálculo sequencial $\Rightarrow$ baixa paralelização
+  \item Dependências longas: vanish/explode (mitigado, não resolvido)
+  \item Memória finita e custo de treino elevado para contextos longos
+\end{itemize}
+% Tempo ~2 min
+\end{frame}
+
+\begin{frame}{LSTM + Attention (Encoder--Decoder)}
+\framesubtitle{Atenção aditiva (Bahdanau)}
+\begin{block}{Equações}
 \small
-\begin{verbatim}
-\begin{colorblock}[black]{sinteflightgreen}{title}
-content...
-\end{colorblock}
-\end{verbatim}
-\end{colorblock}
-The ``official'' colours of colour blocks are: \testcolor{sinteflilla}, 
-\testcolor{maincolor}, \testcolor{sintefdarkgreen}, and 
-\testcolor{sintefyellow}.
-\end{column}
-\end{columns}
-\end{frame}
-
-\footlinecolor{}
-\begin{frame}[fragile]{Using Colours}
-\begin{itemize}[<alert@2>]
-  \item You can use colours with the
-        \verb|\textcolor{<color name>}{text}| command
-  \item The colours are defined in the \texttt{sintefcolor} package:
-  \begin{itemize}
-  \item Primary colours: \testcolor{maincolor} and its sidekick 
-  \testcolor{sintefgrey}
-  \item Three shades of green: \testcolor{sinteflightgreen}, 
-  \testcolor{sintefgreen}, \testcolor{sintefdarkgreen}
-  \item Additional colours: \testcolor{sintefyellow}, \testcolor{sintefred}, 
-        \testcolor{sinteflilla}
-        \begin{itemize}
-        \item These may be shaded---see the \verb|sintefcolor| documentation or 
-        the \hrefcol{https://sintef.sharepoint.com/sites/stottetjenester/%
-        kommunikasjon/grafisk-profil-new/Sider/default.aspx}{SINTEF profile 
-        manual}
-        \end{itemize}
-  \end{itemize}
-  \item Do \emph{not} abuse colours: \verb|\emph{}| is usually enough
-  \item Use \verb|\alert{}| to bring the \alert<2->{focus} somewhere
-  \item<2- | alert@2> If you highlight too much, you don't highlight at all!
-\end{itemize}
-\end{frame}
-
-\begin{frame}[fragile]{Adding images}
-\begin{columns}
-\begin{column}{0.7\textwidth}
-Adding images works like in normal \LaTeX:
-\begin{block}{Code for Adding Images}
-\begin{verbatim}
-\usepackage{graphicx}
-% ...
-\includegraphics[width=\textwidth]
-{assets/logo_RGB}
-\end{verbatim}
+\[
+e_{ij} = v^\top \tanh\!\big(W_1\,h_i + W_2\,s_j\big), \quad
+\alpha_{ij} = \mathrm{softmax}_i(e_{ij}), \quad
+c_j = \sum_i \alpha_{ij} h_i
+\]
 \end{block}
-\end{column}
-\begin{column}{0.3\textwidth}
-\includegraphics[width=\textwidth]
-{assets/logo_RGB}
-\end{column}
-\end{columns}
+\begin{itemize}[<+->]
+  \item \textbf{Alinhamento} dinâmico entre estados do encoder e passos do decoder
+  \item Reduz gargalos de um único vetor de contexto
+\end{itemize}
+% Tempo ~2 min
 \end{frame}
 
-\begin{frame}[fragile]{Splitting in Columns}
-Splitting the page is easy and common;
-typically, one side has a picture and the other text:
-\begin{columns}
-\begin{column}{0.6\textwidth}
-This is the first column
-\end{column}
-\begin{column}{0.3\textwidth}
-And this the second
-\end{column}
-\end{columns}
-\begin{block}{Column Code}
-\begin{verbatim}
-\begin{columns}
-    \begin{column}{0.6\textwidth}
-        This is the first column
-    \end{column}
-    \begin{column}{0.3\textwidth}
-        And this the second
-    \end{column}
-    % There could be more!
-\end{columns}
-\end{verbatim}
+\section{Embeddings \& Interpretações}
+\begin{frame}{Word/Subword Embeddings}
+\begin{itemize}[<+->]
+  \item Estáticos (Word2Vec, GloVe) vs. Contextuais (ELMo, BERT)
+  \item Subword (BPE/Unigram) para robustez morfológica
+  \item Análogos em outras modalidades: patches (ViT), time2vec (TS), node2vec (grafos)
+\end{itemize}
+% Tempo ~2 min
+\end{frame}
+
+\begin{frame}{Interpretação Geométrica da Atenção}
+\begin{itemize}[<+->]
+  \item $Q,K,V$ são projeções lineares do latente
+  \item Similaridade (coseno/dot) guia uma \emph{combinação convexa} de $V$
+  \item Multi-head $\Rightarrow$ múltiplas métricas/projeções simultâneas
+\end{itemize}
+% Tempo ~2 min
+\end{frame}
+
+\begin{frame}{Interpretação Matemática: Self-Attention}
+\begin{block}{Fórmula central (scaled dot-product)}
+\[
+\mathrm{Att}(Q,K,V) \;=\; \mathrm{softmax}\!\left(\frac{QK^\top}{\sqrt{d_k}}\right)\,V
+\]
 \end{block}
+\begin{itemize}[<+->]
+  \item Máscara causal/atencional conforme a tarefa
+  \item Complexidade $\mathcal{O}(n^2)$ em tempo/memória
+  \item Gradientes e saturação da softmax
+\end{itemize}
+% Tempo ~2 min
 \end{frame}
 
-\begin{chapter}[assets/background_negative]{}{Special Slides}
-\begin{itemize}
-\item Chapter slides
-\item Side-picture slides
+\begin{frame}{Positional Encodings}
+\begin{itemize}[<+->]
+  \item Absolutos senoidais vs. aprendidos
+  \item Relativos e RoPE (rotary): melhor generalização/composição
+  \item Impacto em extrapolação e contextos longos
 \end{itemize}
-\end{chapter}
-
-\footlinecolor{sintefred}
-\begin{frame}[fragile]{Chapter slides}
-\begin{itemize}
-\item Similar to \verb|frame|s, but with a few more options
-\item Opened with \verb|\begin{chapter}[<image>]{<color>}{<title>}|
-\item Image is optional, colour and title are mandatory
-\item There are seven ``official'' colours: \testcolor{maincolor}, 
-\testcolor{sintefdarkgreen}, \testcolor{sintefgreen}, 
-\testcolor{sinteflightgreen}, \testcolor{sintefred}, \testcolor{sintefyellow}, 
-\testcolor{sinteflilla}.
-      \begin{itemize}
-      \item Strangely enough, these are \emph{more} than the official colours 
-      for the footline.
-      \item It may still be a nice touch to change the footline of following 
-      slides to the same color of a chapter slide. Your choice.
-      \end{itemize}
-\item Otherwise, \verb|chapter| behaves just like \verb|frame|.
-\end{itemize}
+% Tempo ~2 min
 \end{frame}
 
-\begin{sidepic}{assets/background_negative}{Side-Picture Slides}
-\begin{itemize}
-\item Opened with \texttt{$\backslash$begin\{sidepic\}\{<image>\}\{<title>\}}
-\item Otherwise, \texttt{sidepic} works just like \texttt{frame}
-\end{itemize}
-\end{sidepic}
+%===========================
+% TRANSFORMERS
+%===========================
+\begin{chapter}[assets/background_negative]{sinteflightgreen}{Transformers}\end{chapter}
 
-\footlinecolor{}
+\section{Arquiteturas \& Variantes}
+\begin{frame}{Arquiteturas Transformer}
+\begin{itemize}[<+->]
+  \item \textbf{Encoder--Decoder}, \textbf{Encoder-only}, \textbf{Decoder-only}
+  \item Bloco: MHSA + FFN, \textit{residual} + \textit{layer norm}
+  \item Pré-norm vs. pós-norm (estabilidade de treino)
+\end{itemize}
+% Tempo ~2 min
+\end{frame}
+
+\begin{frame}{Atenções Eficientes}
+\begin{itemize}[<+->]
+  \item \textbf{Esparsidade}: Longformer/BigBird (padrões locais+globais)
+  \item \textbf{Aproximação}: Linformer, Nyströmformer
+  \item \textbf{Kernels}: Performer (favor+), FlashAttention (IO-aware)
+  \item \textbf{Outros}: Reformer (LSH)
+\end{itemize}
+\begin{block}{Trade-off}
+Complexidade $\mathcal{O}(n^2)$ $\rightarrow$ $\tilde{\mathcal{O}}(n)$ com perda controlada de exatidão e/ou restrições de padrão.
+\end{block}
+% Tempo ~3 min
+\end{frame}
+
+\section{Treino \& Hiperparâmetros}
+\begin{frame}{Práticas de Treino}
+\begin{itemize}[<+->]
+  \item AdamW, warmup + decaimento; label smoothing quando aplicável
+  \item Regularização: dropout, stochastic depth, weight decay
+  \item AMP/mixed precision, grad clipping, checkpointing
+  \item Dados: curriculum, masking, augmentation (TS/ViT/GAT)
+\end{itemize}
+% Tempo ~3 min
+\end{frame}
+
+\begin{frame}{Hiperparâmetros Essenciais}
+\begin{itemize}[<+->]
+  \item Profundidade, $d_{\text{model}}$, \#heads, $d_{ff}$, dropout
+  \item Comprimento de contexto, batch size, \textit{LR schedule}
+  \item Específicos: tokenização (LM), \textit{patch size} (ViT), janela/patch (TS)
+\end{itemize}
+% Tempo ~2 min
+\end{frame}
+
+\begin{frame}{Qual tamanho ideal? (Scaling)}
+\begin{itemize}[<+->]
+  \item Leis de escala vs. limite de dados/compute
+  \item Tokens vs. parâmetros; saturação com contexto
+  \item Regra prática: dimensione para o dataset e o \textit{budget} de inferência
+\end{itemize}
+% Tempo ~3 min
+\end{frame}
+
+%===========================
+% APLICAÇÕES
+%===========================
+\begin{chapter}[assets/background_negative]{sintefyellow}{Aplicações}\end{chapter}
+
+\section{Séries Temporais}
+\begin{frame}{Atenção em Séries Temporais}
+\begin{itemize}[<+->]
+  \item Codificação temporal: absolutos/relativos, time2vec, calendários/sazonalidade
+  \item Exógenas e \textit{cross-attention}; \textit{patching} para contextos longos
+  \item Tarefas: previsão, imputação, detecção de anomalias
+\end{itemize}
+% Tempo ~3 min
+\end{frame}
+
+\section{Language Models}
+\begin{frame}{Language Models (LM)}
+\begin{itemize}[<+->]
+  \item Atenção \textbf{causal}, \textit{next-token} e \textit{masking}
+  \item Pré-treino vs. \textit{fine-tuning}; Instrução/LoRA/Adapters
+  \item Métricas: perplexidade e tarefas \textit{downstream}
+\end{itemize}
+% Tempo ~2 min
+\end{frame}
+
+\section{Vision Transformer}
+\begin{frame}{Vision Transformer (ViT)}
+\begin{itemize}[<+->]
+  \item Imagem $\rightarrow$ \textit{patches} + \texttt{[CLS]} token
+  \item Posicionais 2D; augmentations (RandAug, Mixup/CutMix)
+  \item Transfer: \textit{linear probe} vs. \textit{fine-tune}
+\end{itemize}
+% Tempo ~2 min
+\end{frame}
+
+\section{Graph Attention}
+\begin{frame}{Graph Attention Networks (GAT)}
+\begin{block}{Coeficientes de Atenção (um cabeçalho)}
+\small
+\[
+\alpha_{ij}=\mathrm{softmax}_j\!\left(\mathrm{LeakyReLU}\!\big(a^\top[Wh_i \,||\, Wh_j]\big)\right)
+\]
+\end{block}
+\begin{itemize}[<+->]
+  \item Multi-head; sobre-\textit{smoothing} e escalabilidade
+  \item Heterógrafos e atenção relacional
+\end{itemize}
+% Tempo ~2 min
+\end{frame}
+
+%===========================
+% ESCALA & COMPRESSÃO
+%===========================
+\begin{chapter}[assets/background_negative]{sintefred}{Escala \& Compressão}\end{chapter}
+
+\section{MoE, Pruning, Distillation}
+\begin{frame}{Mixture of Experts (MoE)}
+\begin{itemize}[<+->]
+  \item \textit{Gating} top-1/top-2; balanceamento de carga
+  \item Roteamento esparso: capacidade vs. ociosidade
+  \item Custos de comunicação e estabilidade no treino
+\end{itemize}
+% Tempo ~2 min
+\end{frame}
+
+\begin{frame}{Pruning}
+\begin{itemize}[<+->]
+  \item Não estruturado (magnitude) vs. estruturado (canal/bloco, n:m)
+  \item Iterativo vs. \textit{one-shot}; impacto em latência real
+  \item Interação com quantização e \textit{sparsity-aware kernels}
+\end{itemize}
+% Tempo ~2 min
+\end{frame}
+
+\begin{frame}{Distillation}
+\begin{block}{Perda típica (Hinton)}
+\small
+\[
+\mathcal{L}=(1-\lambda)\,\mathrm{CE}(y,s)+\lambda\,T^2\,\mathrm{KL}\!\big(p_T \,\|\, q_T\big)
+\]
+\end{block}
+\begin{itemize}[<+->]
+  \item \textit{Teacher} $\rightarrow$ \textit{student}; temperatura $T$
+  \item \textit{Intermediate layer hints}; \textit{task-specific} vs. generalista
+  \item Benefícios: latência/energia e \textit{edge deployment}
+\end{itemize}
+% Tempo ~2 min
+\end{frame}
+
+%===========================
+% INTERPRETAÇÃO & LIMITES
+%===========================
+\begin{chapter}[assets/background_negative]{sinteflilla}{Interpretação \& Limitações}\end{chapter}
+
+\section{Diagnóstico \& Limites}
+\begin{frame}{Interpretação \& Diagnóstico}
+\begin{itemize}[<+->]
+  \item \textit{Attention rollout/flow}; atenção $\neq$ causalidade
+  \item \textit{Probing} de camadas; ablação de cabeças
+  \item Ferramentas de \textit{explainability} por domínio
+\end{itemize}
+% Tempo ~2 min
+\end{frame}
+
+\begin{frame}{Limitações \& Trade-offs}
+\begin{itemize}[<+->]
+  \item Custo $\mathcal{O}(n^2)$, viés de dados, \textit{OOD} robustness
+  \item Contaminação de treino e privacidade
+  \item Energia/carbono e restrições de hardware
+\end{itemize}
+% Tempo ~2 min
+\end{frame}
+
+%===========================
+% CONCLUSÕES
+%===========================
+\section{Conclusões}
+\begin{frame}{Conclusões}
+\begin{itemize}[<+->]
+  \item Atenção como princípio unificador em sequência, visão e grafos
+  \item Escolha guiada por dados, métricas e orçamento (treino/inferência)
+  \item Escala e compressão (MoE/pruning/distillation) para produção
+\end{itemize}
+% Tempo ~1 min
+\end{frame}
+
+%===========================
+% Q&A
+%===========================
+\backmatter
 \begin{frame}
-\frametitle{Fonts}
+\frametitle{Perguntas?}
+\centering
+Obrigado!
+\end{frame}
+
+%===========================
+% BACKUP (opc.)
+%===========================
+\section{Backup (Opcional)}
+\begin{frame}{Equações úteis (resumo)}
+\small
 \begin{itemize}
-\item The paramount task of fonts is being readable
-\item There are good ones...
-  \begin{itemize}
-  \item {\textrm{Use serif fonts only with high-definition projectors}}
-  \item {\textsf{Use sans-serif fonts otherwise (or if you simply prefer 
-them)}}
-  \end{itemize}
-\item ... and not so good ones:
-  \begin{itemize}
-  \item {\texttt{Never use monospace for normal text}}
-  \item {Gothic, calligraphic or weird fonts: should always: be
-  avoided}
-\end{itemize}
+  \item Scaled dot-product, aditiva (Bahdanau)
+  \item Atenção relativa e RoPE
+  \item GAT detalhado; máscaras causais
 \end{itemize}
 \end{frame}
 
-\begin{frame}[fragile]{Look}
+\begin{frame}{Hiperparâmetros por tarefa (resumo)}
+\small
 \begin{itemize}
-\item To insert a final slide with the title and final thanks, use \verb|\backmatter|.
-      \begin{itemize}
-      \item The title also appears in footlines along with the author name, you can change this text with \verb|\footlinepayoff|
-      \item You can remove the title from the final slide with \verb|\backmatter[notitle]|
-      \end{itemize}
-\item The aspect ratio defaults to 16:9, and you should not change it to 4:3
-      for old projectors as it is inherently impossible to perfectly convert a 
-      16:9 presentation to 4:3 one; spacings \emph{will} break
-      \begin{itemize}
-      \item The \texttt{aspectratio} argument to the \texttt{beamer} class is
-            overridden by the SINTEF theme
-      \item If you \emph{really} know what you are doing, check the package
-            code and look for the \texttt{geometry} class.
-      \end{itemize}
+  \item LM: contexto, BPE, heads/profundidade típicos
+  \item ViT: patch size, MLP ratio, augmentations
+  \item TS: janela, patching, covariáveis, perdas (MAE/MSE/Quantile)
 \end{itemize}
 \end{frame}
 
-\section{Summary}
-
-\begin{frame}
-\frametitle{Good Luck!}
-\begin{itemize}
-\item Enough for an introduction! You should know enough by now
-\item If you have corrections or suggestions,
-\hrefcol{mailto:mattia.ippoliti@studenti.polito.it}{send them to me!}
-\end{itemize}
-\end{frame}
-
-
-\begin{frame}
-\frametitle{Exemplo de Referência Bibliográfica}
-\begin{itemize}
-\item Estou usando aqui \cite{lofar_book_ref}
-\end{itemize}
-\end{frame}
-
-
-
+%===========================
+% REFERÊNCIAS
+%===========================
 \section{Referências Bibliográficas} 
 \begin{frame}[allowframebreaks]
-        \frametitle{Referências Bibliográficas} 
-        \bibliographystyle{ieeetr}
-        \bibliography{presentation_bib.bib}
+  \frametitle{Referências Bibliográficas} 
+  \bibliographystyle{ieeetr}
+  \bibliography{presentation_bib.bib}
 \end{frame}
 
-\backmatter
 \end{document}
+
